project ch6 completed

--- a/Exercises/myWork/index.html
+++ b/Exercises/myWork/index.html
@@ -26,7 +26,7 @@
           <p>View selected projects below. More information can be found at <a href="http://christinatruong.com">christinatruong.com</a>.</p>
   
           <!-- Project 1 -->
-          <section>
+          <section class="project-item">
             <h3>Lynda / LinkedIn Learning Courses</h3>
             <img src="images/project-courses.jpg" alt="Lynda & LinkedIn Learning course list">
             <p>Developed content and instruction for various CSS and front-end focused web development courses including CSS Essential Training, Getting Your Website Online, Design Systems & Architectures and more.</p>
@@ -35,7 +35,7 @@
           </section>
   
           <!-- Project 2 -->
-          <section>
+          <section class="project-item">
             <h3>Women&&Tech</h3>
             <img src="images/project-women-tech.jpg" alt="Women and Tech website">
             <p>Women&&Tech was launched in 2012 to feature interviews with different women working in the tech industry. I became familiar with them when I was invited to be one of the interviewees! A few years later, I joined the team and helped with the relaunch of the site as the front-end architect.</p>
@@ -43,7 +43,7 @@
           </section>
   
           <!-- Project 3 -->
-          <section>
+          <section class="project-item">
             <h3>The Wire Ipsum</h3>
             <img src="images/project-wire-ipsum.jpg" alt="The Wire Ipsum website">
             <p>After coming back from teaching a JavaScript workshop, I felt inspired to create something just for fun. I realized that of all the content/lorem ipsum generators available, there was nothing for HBO’s The Wire fans. I searched for <a href="http://thewireipsum.com" target="_blank">thewireipsum.com</a> domain and it was available! Generate some content for your projects today.</p>
@@ -134,7 +134,7 @@
           <h2>Let's Keep in Touch!</h2>
 
           <!-- Social media and contact links. Add or remove any networks. -->
-          <ul>
+          <ul class="contact-list">
             <li><a href="mailto:email@example.com">email@example.com</a></li>
             <li><a href="http://christinatruong.com" target="_blank">christinatruong.com</a></li>
             <li><a href="http://twitter.com/christinatruong" target="_blank">Twitter</a></li>
